--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "node index.js",
     "test": "npm run lint && node tests/core/run.js",
     "lint": "eslint .",
     "fix": "eslint . --fix"
